# coastal

./: Cargo.toml  README.md
coastal/: Cargo.toml
coastal/examples/: basic.rs
coastal/src/: lib.rs
coastal_core/: Cargo.toml
coastal_core/src/: api.rs  errors.rs  lib.rs  state.rs  types.rs
coastal_core/src/api/: constant.rs  function.rs  library.rs  mod.rs  state.rs
coastal_core/src/macros/: api.rs  coast.rs  mod.rs
coastal_derive/: Cargo.toml
coastal_derive/src/: lib.rs
coastal_macros/: Cargo.toml
examples/: basic.rs
src/: api.rs  attr_macro.rs  errors.rs  impl_macro.rs  lib.rs  state.rs
