[package]
name = "coastal"
version = "0.1.0"
authors = ["Tim Evans"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "C wrapper generation for Rust"
homepage = "https://github.com/<my name here>/coastal"
repository = "https://github.com/<my name here>/coastal"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
macro_state = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
syn = { version = "2.0", features = [ "full", "extra-traits" ] }

[[example]]
name = "basic"
crate-type = [ "cdylib" ]
