[package]
name = "coastal"
description = "C wrapper generation for Rust"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
coastal_core = { path = "../coastal_core" }
coastal_macros = { path = "../coastal_macros" }

[[example]]
name = "basic"
crate-type = ["cdylib"]
