[package]
name = "coastal_macros"
description = "Proc-macros for Coastal"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
coastal_core = { path = "../coastal_core" }
proc-macro2.workspace = true
